add service worker but still fails to load dbWorker and its deps

--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,7 @@
             ],
             "scripts": [],
             "serviceWorker": true,
+            "webWorkerTsConfig": "tsconfig.worker.json",
             "ngswConfigPath": "ngsw-config.json"
           },
           "configurations": {
