--- a/angular.json
+++ b/angular.json
@@ -109,13 +109,14 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "webWorkerTsConfig": "tsconfig.worker.json"
           }
         }
       }
     }
   },
   "cli": {
-    "analytics": false
+    "analytics": true
   }
 }
