--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-word-game",
+            "outputPath": "docs/angular-word-game",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
