--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.9",
-    "@angular/common": "^16.2.9",
-    "@angular/compiler": "^16.2.9",
-    "@angular/core": "^16.2.9",
-    "@angular/forms": "^16.2.9",
-    "@angular/platform-browser": "^16.2.9",
-    "@angular/platform-browser-dynamic": "^16.2.9",
-    "@angular/router": "^16.2.9",
-    "@angular/service-worker": "^16.0.0",
+    "@angular/animations": "^16.2.12",
+    "@angular/cdk": "^16.2.10",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/material": "^16.2.10",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
+    "@angular/service-worker": "^16.2.12",
     "dexie": "^3.2.4",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
@@ -26,9 +28,9 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.6",
-    "@angular/cli": "~16.2.6",
-    "@angular/compiler-cli": "^16.2.9",
+    "@angular-devkit/build-angular": "^16.2.9",
+    "@angular/cli": "~16.2.9",
+    "@angular/compiler-cli": "^16.2.12",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
